--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     },
     "sources" : {
       "angular" : "bower_components/angular/angular.min.js",
+      "angular-route" : "bower_components/angular-route/angular-route.min.js",
       "jquery" : "bower_components/jquery/dist/jquery.min.js",
       "bootstrap" : ["bower_components/bootstrap/fonts/*"],
       "bootstrap-sass" : 
