--- a/bower.json
+++ b/bower.json
@@ -20,35 +20,36 @@
     "angular": "1.3.16",
     "bootstrap-sass": "~3.3.5",
     "jquery": "~2.1.4",
-    "bootstrap-social": "~4.9.1"
+    "bootstrap-social": "~4.9.1",
+    "angular-ui-router": "~0.2.15"
   },
-  "install" : {
-    "base" : "assets",
-    "path" : {
-      "js"  : "/js",
-      "eot" : "/fonts",
-      "svg" : "/fonts",
-      "ttf" : "/fonts",
+  "install": {
+    "base": "assets",
+    "path": {
+      "js": "/js",
+      "eot": "/fonts",
+      "svg": "/fonts",
+      "ttf": "/fonts",
       "woff": "/fonts",
       "woff2": "/fonts",
       "otf": "/fonts",
-      "scss" : "/stylesheets"
+      "scss": "/stylesheets"
     },
-    "sources" : {
-      "angular" : "bower_components/angular/angular.min.js",
-      "angular-route" : "bower_components/angular-route/angular-route.min.js",
-      "jquery" : "bower_components/jquery/dist/jquery.min.js",
-      "bootstrap" : ["bower_components/bootstrap/fonts/*"],
-      "bootstrap-sass" : 
-        [
-          "bower_components/bootstrap-sass/assets/stylesheets/**"
-        ],
-      "font-awesome" : 
-        [ 
-          "bower_components/font-awesome/fonts/*",
-          "bower_components/font-awesome/scss/*"
-        ],
-      "bootstrap-social" : "bower_components/bootstrap-social/bootstrap-social.scss"
+    "sources": {
+      "angular": "bower_components/angular/angular.min.js",
+      "angular-ui-router": "bower_components/angular-ui-router/release/angular-ui-router.min.js",
+      "jquery": "bower_components/jquery/dist/jquery.min.js",
+      "bootstrap": [
+        "bower_components/bootstrap/fonts/*"
+      ],
+      "bootstrap-sass": [
+        "bower_components/bootstrap-sass/assets/stylesheets/**"
+      ],
+      "font-awesome": [
+        "bower_components/font-awesome/fonts/*",
+        "bower_components/font-awesome/scss/*"
+      ],
+      "bootstrap-social": "bower_components/bootstrap-social/bootstrap-social.scss"
     }
   }
 }
