--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: node_js
+before_install:
+	- "export DISPLAY=:99.0"
+  	- "sh -e /etc/init.d/xvfb start"
+  	- gem install sass
+
 node_js:
-  - 0.4
-  - 0.5
-  - 0.6
+  - '0.10'
+  - '0.11'
+
+before_script:
+  - 'npm -g install bower bower-installer gulp'
+  - 'npm install'
+  - 'bower install'
+  - 'bower-installer'
+
+script: gulp
