--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-ruby-sass": "^1.0.5"
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.3",
+    "gulp-ruby-sass": "^1.0.5",
+    "gulp-uglify": "^1.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
