--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "http": "^0.0.0"
   },
   "devDependencies": {
+    "angular-jsdoc": "^1.2.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-ruby-sass": "^1.0.5",
-    "gulp-uglify": "^1.2.0"
+    "gulp-shell": "^0.4.3",
+    "gulp-uglify": "^1.2.0",
+    "jsdoc": "^3.3.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
